--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -2,10 +2,10 @@
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <!-- Insert generated snippet here -->
   <script src="https://giscus.app/client.js"
-  data-repo="HannanKan/discussion"
-  data-repo-id="R_kgDOKUQF1Q"
+  data-repo="HannanKan/homepage"
+  data-repo-id="R_kgDOKMfeHA"
   data-category="Announcements"
-  data-category-id="DIC_kwDOKUQF1c4CZXNn"
+  data-category-id="DIC_kwDOKMfeHM4CZXT3"
   data-mapping="pathname"
   data-strict="0"
   data-reactions-enabled="1"
@@ -15,7 +15,7 @@
   data-lang="zh-CN"
   crossorigin="anonymous"
   async>
- </script>
+</script>
 
   <!-- Synchronize Giscus theme with palette -->
   <script>
